@@ -1,6 +1,5 @@
 package services;
 
-import com.itextpdf.kernel.colors.ColorConstants;
 import com.itextpdf.kernel.colors.DeviceRgb;
 import com.itextpdf.kernel.geom.PageSize;
 import com.itextpdf.kernel.pdf.PdfDocument;
@@ -9,7 +8,6 @@ import com.itextpdf.layout.Document;
 import com.itextpdf.layout.borders.Border;
 import com.itextpdf.layout.borders.SolidBorder;
 import com.itextpdf.layout.element.*;
-import com.itextpdf.layout.properties.HorizontalAlignment;
 import com.itextpdf.layout.properties.TextAlignment;
 import com.itextpdf.layout.properties.UnitValue;
 import entities.Rapport;
@@ -23,296 +21,232 @@ import java.util.Locale;
 
 public class PDFGenerator {
 
-    // ── Palette EchoCare App ──────────────────────────────────
-    private static final DeviceRgb BLUE        = new DeviceRgb(74,  111, 165);   // #4A6FA5
-    private static final DeviceRgb BLUE_DARK   = new DeviceRgb(58,   90, 144);   // #3A5A90
-    private static final DeviceRgb BLUE_LIGHT  = new DeviceRgb(235, 244, 255);   // #EBF4FF
-    private static final DeviceRgb CORAL       = new DeviceRgb(232, 149, 109);   // #E8956D
-    private static final DeviceRgb CORAL_LIGHT = new DeviceRgb(255, 240, 232);   // #FFF0E8
-    private static final DeviceRgb AMBER       = new DeviceRgb(245, 200, 122);   // #F5C87A
-    private static final DeviceRgb AMBER_LIGHT = new DeviceRgb(255, 252, 232);   // #FFFCE8
-    private static final DeviceRgb GREEN       = new DeviceRgb(82,  183, 136);   // #52B788
-    private static final DeviceRgb GREEN_LIGHT = new DeviceRgb(208, 240, 224);   // #D0F0E0
-    private static final DeviceRgb CREAM       = new DeviceRgb(250, 248, 244);   // #FAF8F4
-    private static final DeviceRgb TEXT_DARK   = new DeviceRgb(45,  55,  72);    // #2D3748
-    private static final DeviceRgb TEXT_MID    = new DeviceRgb(113, 128, 150);   // #718096
-    private static final DeviceRgb TEXT_LIGHT  = new DeviceRgb(160, 174, 192);   // #A0AEC0
+    // ── Palette EchoCare ──────────────────────────────────────
+    private static final DeviceRgb BLUE        = new DeviceRgb(74,  111, 165);
+    private static final DeviceRgb BLUE_DARK   = new DeviceRgb(58,   90, 144);
+    private static final DeviceRgb CORAL       = new DeviceRgb(232, 149, 109);
+    private static final DeviceRgb GREEN       = new DeviceRgb(82,  183, 136);
+    private static final DeviceRgb CREAM       = new DeviceRgb(250, 248, 244);
+    private static final DeviceRgb BORDER_LIGHT= new DeviceRgb(232, 228, 223);
+    private static final DeviceRgb TEXT_DARK   = new DeviceRgb(45,   55,  72);
+    private static final DeviceRgb TEXT_MID    = new DeviceRgb(113, 128, 150);
+    private static final DeviceRgb TEXT_LIGHT  = new DeviceRgb(160, 174, 192);
     private static final DeviceRgb WHITE       = new DeviceRgb(255, 255, 255);
-    private static final DeviceRgb BORDER_SOFT = new DeviceRgb(232, 228, 223);   // #E8E4DF
 
     private static final String RAPPORTS_DIR = "rapports_pdf";
+    private static final DateTimeFormatter DATE_FR = DateTimeFormatter.ofPattern("dd/MM/yyyy", Locale.FRENCH);
+    private static final DateTimeFormatter TIME_FR = DateTimeFormatter.ofPattern("HH:mm",       Locale.FRENCH);
 
     public static String generateRapport(User patient, User coach, Rapport rapport) throws IOException {
-        File dir = new File(RAPPORTS_DIR);
-        if (!dir.exists()) dir.mkdirs();
-
-        String fileName = "EchoCare_Rapport_"
-                + patient.getNom().replaceAll("\\s+","_") + "_"
-                + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss"))
-                + ".pdf";
+        new File(RAPPORTS_DIR).mkdirs();
+        String fileName = "EchoCare_" + patient.getNom().replaceAll("\\s+", "_") + "_"
+                + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd_HHmmss")) + ".pdf";
         String filePath = RAPPORTS_DIR + File.separator + fileName;
 
-        PdfWriter writer   = new PdfWriter(filePath);
+        PdfWriter   writer = new PdfWriter(filePath);
         PdfDocument pdfDoc = new PdfDocument(writer);
-        Document doc       = new Document(pdfDoc, PageSize.A4);
-        doc.setMargins(0, 0, 36, 0);
+        // Marges réduites pour maximiser l'espace utile
+        Document doc = new Document(pdfDoc, PageSize.A4);
+        doc.setMargins(30, 40, 28, 40);
 
-        addHeader(doc, coach);
-        doc.setLeftMargin(40);
-        doc.setRightMargin(40);
-        addInfoSection(doc, patient, coach, rapport);
-        addDivider(doc);
-        addStatsRow(doc, rapport);
-        addDivider(doc);
-        addTextSection(doc, "📝  Observations et notes de suivi", rapport.getContenu(), BLUE_LIGHT, BLUE);
-        addDivider(doc);
-        addRecommandations(doc, rapport);
-        addDivider(doc);
-        addMoodBar(doc, rapport);
-        addSignature(doc, coach);
-        addFooter(doc);
+        buildHeader(doc);
+        buildInfoCards(doc, patient, coach, rapport);
+        buildSectionTitle(doc, "Résumé de la période");
+        buildStatsRow(doc, rapport);
+        buildSectionTitle(doc, "Observations");
+        buildTextBlock(doc, rapport.getContenu(), BLUE);
+        buildSectionTitle(doc, "Recommandations");
+        buildTextBlock(doc, rapport.getRecommandations(), GREEN);
+        buildSectionTitle(doc, "Score d'humeur");
+        buildMoodBlock(doc, rapport.getScore_humeur());
+        buildSignature(doc, coach);
+        buildFooter(doc);
 
         doc.close();
-        System.out.println("✅ PDF: " + filePath);
         return filePath;
     }
 
-    // ── Header bandeau bleu ───────────────────────────────────
-    private static void addHeader(Document doc, User coach) {
-        // Bandeau top bleu dégradé (simulé avec une table pleine largeur)
-        Table band = new Table(UnitValue.createPercentArray(new float[]{55, 45}))
-                .useAllAvailableWidth()
-                .setMarginBottom(0);
+    // ── Header ────────────────────────────────────────────────
+    private static void buildHeader(Document doc) {
+        addColorLine(doc, BLUE_DARK, 4);
 
-        // Left: Logo + title
-        Cell left = new Cell().setBorder(Border.NO_BORDER)
-                .setBackgroundColor(BLUE_DARK)
-                .setPadding(30)
-                .setPaddingLeft(42);
+        Table h = new Table(UnitValue.createPercentArray(new float[]{60, 40}))
+                .useAllAvailableWidth().setMarginTop(12).setMarginBottom(4);
 
+        Cell left = new Cell().setBorder(Border.NO_BORDER);
         left.add(new Paragraph("EchoCare")
-                .setFontSize(30).setFontColor(WHITE).setBold().setMarginBottom(4));
+                .setFontSize(22).setFontColor(BLUE).setBold().setMarginBottom(1));
         left.add(new Paragraph("Écouter · Comprendre · Accompagner")
-                .setFontSize(10).setFontColor(new DeviceRgb(200,215,235)).setItalic());
+                .setFontSize(8).setFontColor(TEXT_LIGHT).setItalic());
+        h.addCell(left);
 
-        // Right: report type + date
-        Cell right = new Cell().setBorder(Border.NO_BORDER)
-                .setBackgroundColor(BLUE)
-                .setPadding(30)
-                .setPaddingRight(42)
-                .setTextAlignment(TextAlignment.RIGHT);
+        Cell right = new Cell().setBorder(Border.NO_BORDER).setTextAlignment(TextAlignment.RIGHT);
+        right.add(new Paragraph("Rapport de Suivi")
+                .setFontSize(11).setFontColor(CORAL).setBold());
+        right.add(new Paragraph(LocalDateTime.now().format(DATE_FR) + "  " + LocalDateTime.now().format(TIME_FR))
+                .setFontSize(8).setFontColor(TEXT_LIGHT));
+        h.addCell(right);
+        doc.add(h);
 
-        right.add(new Paragraph("RAPPORT DE SUIVI")
-                .setFontSize(13).setFontColor(WHITE).setBold().setMarginBottom(4));
-        right.add(new Paragraph("Document confidentiel")
-                .setFontSize(9).setFontColor(AMBER).setItalic().setMarginBottom(6));
-        right.add(new Paragraph(LocalDateTime.now()
-                .format(DateTimeFormatter.ofPattern("dd/MM/yyyy 'à' HH:mm")))
-                .setFontSize(9).setFontColor(new DeviceRgb(200,215,235)));
-
-        band.addCell(left);
-        band.addCell(right);
-        doc.add(band);
-
-        // Orange accent bar
-        Table bar = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
-        bar.addCell(new Cell().setBorder(Border.NO_BORDER)
-                .setBackgroundColor(CORAL).setPadding(3)
-                .add(new Paragraph("")));
-        doc.add(bar);
+        addColorLine(doc, BORDER_LIGHT, 1);
+        doc.add(spacer(8));
     }
 
-    // ── Patient + Coach info ──────────────────────────────────
-    private static void addInfoSection(Document doc, User patient, User coach, Rapport rapport) {
-        doc.add(new Paragraph("").setMarginTop(24));
-
+    // ── Cartes patient / coach ────────────────────────────────
+    private static void buildInfoCards(Document doc, User patient, User coach, Rapport rapport) {
         Table t = new Table(UnitValue.createPercentArray(new float[]{50, 50}))
-                .useAllAvailableWidth();
+                .useAllAvailableWidth().setMarginBottom(10);
 
-        // Patient card
-        Cell pc = new Cell().setBorder(new SolidBorder(BLUE_LIGHT, 1.5f))
-                .setBackgroundColor(BLUE_LIGHT).setPadding(18);
-        pc.add(new Paragraph("PATIENT").setFontSize(9).setFontColor(BLUE).setBold());
+        Cell pc = new Cell().setBorder(new SolidBorder(BORDER_LIGHT, 1))
+                .setBackgroundColor(CREAM).setPadding(11);
+        pc.add(new Paragraph("PATIENT")
+                .setFontSize(7).setFontColor(BLUE).setBold().setCharacterSpacing(0.8f));
         pc.add(new Paragraph(patient.getPrenom() + " " + patient.getNom())
-                .setFontSize(15).setFontColor(TEXT_DARK).setBold().setMarginBottom(6));
-        addInfoLine(pc, "✉  ", patient.getEmail());
-        addInfoLine(pc, "☎  ", patient.getNum_tel() != null ? patient.getNum_tel() : "—");
-        addInfoLine(pc, "📅  ", "Période: " + rapport.getPeriode());
+                .setFontSize(13).setFontColor(TEXT_DARK).setBold().setMarginBottom(5));
+        addInfo(pc, patient.getEmail());
+        if (patient.getNum_tel() != null && !patient.getNum_tel().isBlank())
+            addInfo(pc, patient.getNum_tel());
+        addInfo(pc, "Période : " + (rapport.getPeriode() != null ? rapport.getPeriode() : "—"));
         t.addCell(pc);
 
-        // Coach card
-        Cell cc = new Cell().setBorder(new SolidBorder(AMBER_LIGHT, 1.5f))
-                .setBackgroundColor(AMBER_LIGHT).setPadding(18);
-        cc.add(new Paragraph("COACH / THÉRAPEUTE").setFontSize(9).setFontColor(new DeviceRgb(160,120,10)).setBold());
+        Cell cc = new Cell().setBorder(new SolidBorder(BORDER_LIGHT, 1))
+                .setBackgroundColor(WHITE).setPadding(11);
+        cc.add(new Paragraph("COACH")
+                .setFontSize(7).setFontColor(CORAL).setBold().setCharacterSpacing(0.8f));
         cc.add(new Paragraph(coach.getPrenom() + " " + coach.getNom())
-                .setFontSize(15).setFontColor(TEXT_DARK).setBold().setMarginBottom(6));
-        addInfoLine(cc, "✉  ", coach.getEmail());
-        addInfoLine(cc, "☎  ", coach.getNum_tel() != null ? coach.getNum_tel() : "—");
-        addInfoLine(cc, "🎓  ", "Coach bien-être EchoCare");
+                .setFontSize(13).setFontColor(TEXT_DARK).setBold().setMarginBottom(5));
+        addInfo(cc, coach.getEmail());
+        if (coach.getNum_tel() != null && !coach.getNum_tel().isBlank())
+            addInfo(cc, coach.getNum_tel());
+        addInfo(cc, "Coach bien-être EchoCare");
         t.addCell(cc);
-
         doc.add(t);
     }
 
-    private static void addInfoLine(Cell cell, String icon, String text) {
-        cell.add(new Paragraph(icon + text)
-                .setFontSize(10).setFontColor(TEXT_MID).setMarginBottom(3));
+    private static void addInfo(Cell cell, String text) {
+        cell.add(new Paragraph(text)
+                .setFontSize(9).setFontColor(TEXT_MID).setMarginBottom(3));
     }
 
-    // ── Stat cards row ────────────────────────────────────────
-    private static void addStatsRow(Document doc, Rapport rapport) {
-        doc.add(new Paragraph("Résumé du suivi")
-                .setFontSize(15).setFontColor(BLUE).setBold().setMarginBottom(12));
+    // ── Titre section ─────────────────────────────────────────
+    private static void buildSectionTitle(Document doc, String title) {
+        doc.add(spacer(3));
+        doc.add(new Paragraph(title)
+                .setFontSize(11).setFontColor(TEXT_DARK).setBold()
+                .setBorderBottom(new SolidBorder(BORDER_LIGHT, 1))
+                .setPaddingBottom(4).setMarginBottom(6));
+    }
 
-        Table t = new Table(UnitValue.createPercentArray(new float[]{33,34,33}))
-                .useAllAvailableWidth();
-
-        t.addCell(buildStatCard(String.valueOf(rapport.getNb_seances()), "Séances effectuées", CORAL, CORAL_LIGHT));
-        t.addCell(buildStatCard(
-                String.format("%.1f/10", rapport.getScore_humeur()),
-                "Score d'humeur moyen",
-                AMBER, AMBER_LIGHT));
-
-        String prog = rapport.getScore_humeur() >= 7 ? "Excellent ✨"
-                : rapport.getScore_humeur() >= 5 ? "En progrès 📈"
-                : "En cours 🔄";
-        t.addCell(buildStatCard(prog, "Niveau de progression", GREEN, GREEN_LIGHT));
-
+    // ── Stats 3 chiffres ──────────────────────────────────────
+    private static void buildStatsRow(Document doc, Rapport rapport) {
+        Table t = new Table(UnitValue.createPercentArray(new float[]{33, 34, 33}))
+                .useAllAvailableWidth().setMarginBottom(10);
+        t.addCell(statCell(String.valueOf(rapport.getNb_seances()),       "Séances",     CORAL));
+        t.addCell(statCell(String.format("%.1f/10", rapport.getScore_humeur()), "Humeur", BLUE));
+        String prog = rapport.getScore_humeur() >= 7 ? "Excellent"
+                : rapport.getScore_humeur() >= 5 ? "En progrès" : "En cours";
+        t.addCell(statCell(prog, "Progression", GREEN));
         doc.add(t);
     }
 
-    private static Cell buildStatCard(String val, String label, DeviceRgb accent, DeviceRgb bg) {
-        Cell c = new Cell().setBackgroundColor(bg)
-                .setBorder(new SolidBorder(accent, 2f))
-                .setPadding(18).setTextAlignment(TextAlignment.CENTER);
-        c.add(new Paragraph(val).setFontSize(20).setFontColor(accent).setBold()
+    private static Cell statCell(String val, String label, DeviceRgb color) {
+        Cell c = new Cell().setBorder(Border.NO_BORDER).setPadding(10)
+                .setTextAlignment(TextAlignment.CENTER);
+        c.add(new Paragraph(val)
+                .setFontSize(15).setFontColor(color).setBold()
                 .setTextAlignment(TextAlignment.CENTER));
-        c.add(new Paragraph(label).setFontSize(9).setFontColor(TEXT_MID)
+        c.add(new Paragraph(label)
+                .setFontSize(8).setFontColor(TEXT_LIGHT)
                 .setTextAlignment(TextAlignment.CENTER));
         return c;
     }
 
-    // ── Text section (observations / contenu) ─────────────────
-    private static void addTextSection(Document doc, String title, String content,
-                                       DeviceRgb bgColor, DeviceRgb borderColor) {
-        doc.add(new Paragraph(title).setFontSize(14).setFontColor(borderColor).setBold().setMarginBottom(10));
-        Table box = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
-        Cell cell = new Cell().setBackgroundColor(bgColor)
-                .setBorder(new SolidBorder(borderColor, 1.5f))
-                .setPadding(18);
-        cell.add(new Paragraph(content).setFontSize(11).setFontColor(TEXT_DARK)
-                .setFixedLeading(17f));
-        box.addCell(cell);
-        doc.add(box);
-    }
+    // ── Bloc texte avec bordure gauche ────────────────────────
+    private static void buildTextBlock(Document doc, String content, DeviceRgb accent) {
+        Cell cell = new Cell()
+                .setBorder(Border.NO_BORDER)
+                .setBorderLeft(new SolidBorder(accent, 3))
+                .setBackgroundColor(CREAM)
+                .setPadding(11).setPaddingLeft(16);
 
-    // ── Recommandations ───────────────────────────────────────
-    private static void addRecommandations(Document doc, Rapport rapport) {
-        doc.add(new Paragraph("🌿  Recommandations")
-                .setFontSize(14).setFontColor(GREEN).setBold().setMarginBottom(10));
-
-        Table box = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
-        Cell cell = new Cell().setBackgroundColor(GREEN_LIGHT)
-                .setBorder(new SolidBorder(GREEN, 1.5f))
-                .setPadding(18);
-
-        for (String line : rapport.getRecommandations().split("\n")) {
-            if (!line.trim().isEmpty()) {
-                cell.add(new Paragraph("  ✦  " + line.trim())
-                        .setFontSize(11).setFontColor(TEXT_DARK).setMarginBottom(5));
+        boolean hasContent = content != null && !content.isBlank();
+        if (hasContent) {
+            for (String line : content.split("\n")) {
+                if (!line.isBlank())
+                    cell.add(new Paragraph(line.trim())
+                            .setFontSize(10).setFontColor(TEXT_DARK).setMarginBottom(3));
             }
+        } else {
+            cell.add(new Paragraph("—").setFontSize(10).setFontColor(TEXT_LIGHT));
         }
-        box.addCell(cell);
-        doc.add(box);
-    }
-
-    // ── Visual mood bar ───────────────────────────────────────
-    private static void addMoodBar(Document doc, Rapport rapport) {
-        double score = rapport.getScore_humeur();
-        doc.add(new Paragraph("😊  Évaluation de l'humeur")
-                .setFontSize(14).setFontColor(CORAL).setBold().setMarginBottom(10));
 
         Table box = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
-        Cell cell = new Cell().setBackgroundColor(CORAL_LIGHT)
-                .setBorder(new SolidBorder(CORAL, 1.5f))
-                .setPadding(18);
+        box.addCell(cell);
+        doc.add(box);
+        doc.add(spacer(8));
+    }
 
-        cell.add(new Paragraph(getHumeurEmoji(score) + "  Score: "
-                + String.format("%.1f", score) + " / 10")
+    // ── Bloc humeur ───────────────────────────────────────────
+    private static void buildMoodBlock(Document doc, double score) {
+        String emoji = score >= 8 ? "Excellent" : score >= 6 ? "Bon" : score >= 4 ? "Modéré" : "Fragile";
+        int filled   = (int) Math.round(score);
+        String bar   = "█".repeat(filled) + "░".repeat(10 - filled);
+
+        Cell cell = new Cell()
+                .setBorder(Border.NO_BORDER)
+                .setBorderLeft(new SolidBorder(CORAL, 3))
+                .setBackgroundColor(CREAM)
+                .setPadding(11).setPaddingLeft(16)
+                .setTextAlignment(TextAlignment.CENTER);
+
+        cell.add(new Paragraph(String.format("%.1f / 10  —  %s", score, emoji))
                 .setFontSize(16).setFontColor(CORAL).setBold()
                 .setTextAlignment(TextAlignment.CENTER));
+        cell.add(new Paragraph(bar)
+                .setFontSize(11).setFontColor(CORAL)
+                .setTextAlignment(TextAlignment.CENTER).setMarginTop(4));
 
-        // Barre visuelle ASCII
-        int filled = (int) score;
-        String bar = "▮".repeat(filled) + "▯".repeat(10 - filled);
-        cell.add(new Paragraph(bar).setFontSize(16)
-                .setFontColor(CORAL).setTextAlignment(TextAlignment.CENTER).setMarginTop(6));
-
-        cell.add(new Paragraph(getMoodDescription(score))
-                .setFontSize(10).setFontColor(TEXT_MID).setItalic()
-                .setTextAlignment(TextAlignment.CENTER).setMarginTop(8));
-
+        Table box = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
         box.addCell(cell);
         doc.add(box);
+        doc.add(spacer(14));
     }
 
     // ── Signature ─────────────────────────────────────────────
-    private static void addSignature(Document doc, User coach) {
-        doc.add(new Paragraph("\n"));
-        Table t = new Table(UnitValue.createPercentArray(new float[]{55, 45}))
+    private static void buildSignature(Document doc, User coach) {
+        Table t = new Table(UnitValue.createPercentArray(new float[]{60, 40}))
                 .useAllAvailableWidth();
+        t.addCell(new Cell().setBorder(Border.NO_BORDER));
 
-        t.addCell(new Cell().setBorder(Border.NO_BORDER)
-                .add(new Paragraph("")));
-
-        Cell sig = new Cell().setBorder(Border.NO_BORDER)
-                .setTextAlignment(TextAlignment.CENTER);
-        sig.add(new Paragraph("_________________________")
-                .setFontSize(10).setFontColor(TEXT_LIGHT));
-        sig.add(new Paragraph(coach.getPrenom() + " " + coach.getNom())
-                .setFontSize(12).setFontColor(TEXT_DARK).setBold().setMarginTop(5));
-        sig.add(new Paragraph("Coach / Thérapeute EchoCare")
-                .setFontSize(9).setFontColor(TEXT_MID).setItalic());
-        sig.add(new Paragraph(LocalDateTime.now()
-                .format(DateTimeFormatter.ofPattern("dd MMMM yyyy", Locale.FRENCH)))
+        Cell sig = new Cell().setBorder(Border.NO_BORDER).setTextAlignment(TextAlignment.CENTER);
+        sig.add(new Paragraph("_____________________")
                 .setFontSize(9).setFontColor(TEXT_LIGHT));
+        sig.add(new Paragraph(coach.getPrenom() + " " + coach.getNom())
+                .setFontSize(10).setFontColor(TEXT_DARK).setBold().setMarginTop(3));
+        sig.add(new Paragraph("Coach EchoCare")
+                .setFontSize(8).setFontColor(TEXT_MID).setItalic());
         t.addCell(sig);
         doc.add(t);
     }
 
     // ── Footer ────────────────────────────────────────────────
-    private static void addFooter(Document doc) {
-        doc.setLeftMargin(0);
-        doc.setRightMargin(0);
-
-        Table band = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
-        band.addCell(new Cell().setBorder(Border.NO_BORDER)
-                .setBackgroundColor(BLUE_DARK).setPadding(14)
-                .add(new Paragraph("EchoCare © 2025  ·  Document confidentiel  ·  Écouter · Comprendre · Accompagner")
-                        .setFontSize(8).setFontColor(new DeviceRgb(200,215,235))
-                        .setTextAlignment(TextAlignment.CENTER).setItalic()));
-        doc.add(band);
+    private static void buildFooter(Document doc) {
+        doc.add(spacer(6));
+        addColorLine(doc, BORDER_LIGHT, 1);
+        doc.add(new Paragraph("EchoCare © 2025  ·  Document confidentiel  ·  Écouter · Comprendre · Accompagner")
+                .setFontSize(7).setFontColor(TEXT_LIGHT)
+                .setTextAlignment(TextAlignment.CENTER).setItalic().setMarginTop(4));
     }
 
-    // ── Divider ───────────────────────────────────────────────
-    private static void addDivider(Document doc) {
-        doc.add(new Paragraph("").setMarginTop(16).setMarginBottom(16));
+    // ── Utils ─────────────────────────────────────────────────
+    private static void addColorLine(Document doc, DeviceRgb color, float h) {
+        Table line = new Table(UnitValue.createPercentArray(1)).useAllAvailableWidth();
+        line.addCell(new Cell().setBorder(Border.NO_BORDER)
+                .setBackgroundColor(color).setMinHeight(h).add(new Paragraph("")));
+        doc.add(line);
     }
 
-    // ── Helpers ───────────────────────────────────────────────
-    private static String getHumeurEmoji(double score) {
-        if (score >= 8) return "😄";
-        if (score >= 6) return "😊";
-        if (score >= 4) return "😐";
-        if (score >= 2) return "😔";
-        return "😢";
-    }
-
-    private static String getMoodDescription(double score) {
-        if (score >= 8) return "Excellent état émotionnel — Progression remarquable";
-        if (score >= 6) return "Bon état général — Évolution positive";
-        if (score >= 4) return "État modéré — Suivi recommandé";
-        if (score >= 2) return "État fragile — Accompagnement renforcé nécessaire";
-        return "État critique — Prise en charge prioritaire";
+    private static Paragraph spacer(float h) {
+        return new Paragraph("").setMarginTop(h).setMarginBottom(0);
     }
 }
